--- a/outils/index.html
+++ b/outils/index.html
@@ -169,13 +169,13 @@ footer {
     </a>
 
     <!-- 2. Plateaux -->
-    <a class="card" href="plateaux_manipulation.html" data-color="plateaux">
+    <a class="card" href="plateaux_manipulation/" data-color="plateaux">
       <div class="card-title">🔲 Plateaux de manipulation</div>
       <p class="card-desc">Espaces de travail vierges ou structurés pour projeter.</p>
     </a>
 
     <!-- 3. Glisse-nombres -->
-    <a class="card" href="glisse_nombres.html" data-color="glisse">
+    <a class="card" href="glisse_nombres/" data-color="glisse">
       <div class="card-title">↔️ Glisse-nombres</div>
       <p class="card-desc">Outil interactif pour comprendre la numération (×10, ÷10).</p>
     </a>
