--- a/outils/index.html
+++ b/outils/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+té<!doctype html>
 <html lang="fr">
 <head>
 <meta charset="utf-8" />
@@ -165,13 +165,13 @@ footer {
     <!-- 1. Fabrication -->
     <a class="card" href="fabrication_materiel/" data-color="fabrication">
       <div class="card-title">✂️ Fabrication de matériel</div>
-      <p class="card-desc">Générateurs pour imprimer, découper et plastifier vos supports.</p>
+      <p class="card-desc">Générateurs de matériel à imprimer, découper et plastifier.</p>
     </a>
 
     <!-- 2. Plateaux -->
     <a class="card" href="plateaux_manipulation/" data-color="plateaux">
       <div class="card-title">🔲 Plateaux de manipulation</div>
-      <p class="card-desc">Espaces de travail vierges ou structurés pour projeter.</p>
+      <p class="card-desc">Espaces de travail pour projeter les manipulations des élèves.</p>
     </a>
 
     <!-- 3. Glisse-nombres -->
@@ -201,7 +201,7 @@ footer {
     <!-- 7. Relatifs -->
     <a class="card" href="relatifs/" data-color="relatifs">
       <div class="card-title">🔴🟢 Relatifs</div>
-      <p class="card-desc">Activités et modèles pour appréhender les nombres relatifs.</p>
+      <p class="card-desc">Activités de manipulation pour appréhender les nombres relatifs.</p>
     </a>
 
   </section>
