--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -202,7 +202,7 @@
     <div class="main-container">
         
         <h1 class="page-title">
-            Mes Applications
+            Les plateaux
         </h1>
 
         <div class="choice-grid">
