--- a/outils/fabrication_materiel/bandes_maker_v2.html
+++ b/outils/fabrication_materiel/bandes_maker_v2.html
@@ -239,7 +239,7 @@
 
                 <label>Séquence d'impression</label>
                 <select id="mode">
-                  <option value="recto_verso_alternating" selected>Recto / Verso Alterné (Pour collage)</option> 
+                  <option value="recto_verso_alternating" selected>Recto / Verso Alterné </option> 
                   <option value="recto_only">Recto Seul (Fractions)</option>
                   <option value="verso_only">Verso Seul (Unités/Autres)</option>
                 </select>
