--- a/outils/plateaux_manipulation/moyennes.html
+++ b/outils/plateaux_manipulation/moyennes.html
@@ -192,6 +192,7 @@
             
             setTool('hand');
             calculateFixedScale();
+            checkWin(); // On vérifie tout de suite si c'est déjà gagné (ex: 10 10)
             render(); 
         }
 
