--- a/outils/relatifs/nombres_relatifs_somme_differenceB.html
+++ b/outils/relatifs/nombres_relatifs_somme_differenceB.html
@@ -186,7 +186,7 @@
                 </button>
 
                 <button onclick="reduceEquation()" class="bg-cyan-100 hover:bg-cyan-200 text-cyan-700 font-bold py-1 px-3 sm:py-2 sm:px-4 rounded-lg shadow-sm border border-cyan-300 active:translate-y-1 transition-all text-sm sm:text-base leading-tight" title="Simplifier l'écriture">
-                    RÉDUIRE <br class="sm:hidden" /> / ALIGNER
+                    RÉDUIRE <br class="sm:hidden" /> / SIMPLIFIER
                 </button>
                 
                 <div class="h-8 w-px bg-slate-200 mx-1"></div>
