--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -247,10 +247,9 @@
                 <h2 class="card-title">Médiane</h2>
             </a>
 
-            <a href="ratio (accompagnement).html" class="choice-card">
+            <a href="ratio.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="divide" class="lucide-main"></i>
-                    <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
                 <h2 class="card-title">Ratio (Accomp.)</h2>
             </a>
