--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -251,7 +251,7 @@
                 <div class="icon-wrapper">
                     <i data-lucide="divide" class="lucide-main"></i>
                 </div>
-                <h2 class="card-title">Ratio (Accomp.)</h2>
+                <h2 class="card-title">Ratio</h2>
             </a>
 
             <!-- TUILES ALGEBRIQUES : Pas de badge construction + Icône Spéciale -->
