--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -239,12 +239,11 @@
                 <h2 class="card-title">Moyennes</h2>
             </a>
 
-            <a href="médiane.html" class="choice-card">
+            <a href="stat_city.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="activity" class="lucide-main"></i>
-                    <div class="construction-badge"><i data-lucide="hammer"></i></div>
                 </div>
-                <h2 class="card-title">Médiane</h2>
+                <h2 class="card-title">Stat city</h2>
             </a>
 
             <a href="ratio.html" class="choice-card">
