--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -239,7 +239,7 @@
                 <h2 class="card-title">Moyennes</h2>
             </a>
 
-            <a href="stat_city.html" class="choice-card">
+            <a href="stats_city.html" class="choice-card">
                 <div class="icon-wrapper">
                     <i data-lucide="activity" class="lucide-main"></i>
                 </div>
