--- a/outils/plateaux_manipulation/index.html
+++ b/outils/plateaux_manipulation/index.html
@@ -243,7 +243,7 @@
                 <div class="icon-wrapper">
                     <i data-lucide="activity" class="lucide-main"></i>
                 </div>
-                <h2 class="card-title">Stat city</h2>
+                <h2 class="card-title">Stats city</h2>
             </a>
 
             <a href="ratio.html" class="choice-card">
