--- a/outils/bouliers/rekenrek/generateur_rekenrek_cartes.html
+++ b/outils/bouliers/rekenrek/generateur_rekenrek_cartes.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Générateur Rekenrek V17 - Final Config</title>
+    <title>Générateur Rekenrek V18 - Contour Fin</title>
     <style>
         /* ---------- CONFIGURATION ---------- */
         :root {
@@ -147,9 +147,9 @@
             box-shadow: inset -2px -2px 4px rgba(0,0,0,0.2), inset 1px 1px 3px rgba(255,255,255,0.7), 1px 1px 1px rgba(0,0,0,0.2);
         }
         
-        /* Contour dynamique */
+        /* Contour dynamique - PLUS FIN (0.5px) */
         .bead.with-outline {
-            border: 1px solid #222 !important;
+            border: 0.5px solid #333 !important; /* Contour très fin */
             box-shadow: inset -1px -1px 3px rgba(0,0,0,0.1), inset 1px 1px 2px rgba(255,255,255,0.5);
         }
 
