--- a/outils/bouliers/rekenrek/generateur_rekenrek_cartes.html
+++ b/outils/bouliers/rekenrek/generateur_rekenrek_cartes.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Générateur Rekenrek V18 - Contour Fin</title>
+    <title>Générateur Rekenrek V19 - Contours Activés</title>
     <style>
         /* ---------- CONFIGURATION ---------- */
         :root {
@@ -219,8 +219,8 @@
             <div class="input-group">
                 <span class="label-title">Appliquer Contour Noir (Cercle) :</span>
                 <div class="row radio-group">
-                    <label><input type="checkbox" id="outlineRed"> Sur Rouges</label>
-                    <label><input type="checkbox" id="outlineSec"> Sur 2ème couleur</label>
+                    <label><input type="checkbox" id="outlineRed" checked> Sur Rouges</label>
+                    <label><input type="checkbox" id="outlineSec" checked> Sur 2ème couleur</label>
                 </div>
             </div>
 
