--- a/outils/bouliers/rekenrek/index.html
+++ b/outils/bouliers/rekenrek/index.html
@@ -159,7 +159,13 @@
             <h3>Rekenrek Libre</h3>
             <p>L'outil interactif pour manipuler librement.</p>
         </a>
-
+        
+        <a href="rekenrek_FD.html" class="card-link">
+            <div class="icon-box">🧮</div>
+            <h3>Rekenrek écriture décimale</h3>
+            <p>L'outil interactif pour comprendre les deux premières décimales</p>
+        </a>
+        
         <a href="lecture_de_nombres.html" class="card-link">
             <div class="icon-box">👁️</div>
             <h3>Lecture de nombres</h3>
