--- a/outils/plateaux_manipulation/unités d'aires.html
+++ b/outils/plateaux_manipulation/unités d'aires.html
@@ -117,7 +117,7 @@
     </div>
     <div class="flex gap-2 pointer-events-auto">
         <button id="btn-grid-toggle" class="toggle-btn" onclick="app.cycleGridMode()" style="display:none">Grille: Normale</button>
-        <button id="btn-values" class="toggle-btn" onclick="app.toggleValues()">123</button>
+        <button id="btn-values" class="toggle-btn" onclick="app.toggleValues()">Valeur</button>
     </div>
 </div>
 
@@ -869,3 +869,4 @@
 </script>
 </body>
 </html>
+
