--- a/outils/plateaux_manipulation/ratio.html
+++ b/outils/plateaux_manipulation/ratio.html
@@ -162,11 +162,15 @@
 
     <!-- CURSEUR VIRTUEL -->
     <div id="custom-cursor">
-        <svg class="drop-shadow-lg" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M27 7 L13 21" stroke="#1d4ed8" stroke-width="6" stroke-linecap="round"/>
-            <path d="M13 21 L8 32" stroke="#0f172a" stroke-width="4" stroke-linecap="round"/>
-            <path d="M8 32 L12 28 L16 32 Z" fill="#111827"/>
-            <circle cx="8" cy="32" r="1" fill="white"/>
+        <!-- Icône de stylo : la pointe est proche du bas-gauche pour pouvoir l'aligner sur la position de la souris -->
+        <svg class="drop-shadow-lg" width="40" height="40" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <!-- Corps du stylo (diagonale) -->
+            <path d="M52.5 11.5l0 0c2.4 2.4 2.4 6.3 0 8.7L27.2 45.5 18.5 36.8 43.8 11.5c2.4-2.4 6.3-2.4 8.7 0z" fill="#111827"/>
+            <path d="M18.5 36.8l8.7 8.7-11.6 3.1c-.7.2-1.3-.4-1.1-1.1l3.1-11.6z" fill="#0f172a"/>
+            <!-- Bague / détail -->
+            <path d="M39.3 16.0l8.7 8.7" stroke="#9ca3af" stroke-width="3.5" stroke-linecap="round"/>
+            <!-- Pointe (petit reflet) -->
+            <circle cx="17.8" cy="47.2" r="1.3" fill="#f8fafc"/>
         </svg>
     </div>
 
@@ -206,10 +210,10 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                 </svg>
             </button>
-            <button onclick="clearCanvas()" class="p-2 rounded text-red-400 hover:bg-red-50" title="Effacer dessin">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                </svg>
+            <button onclick="clearCanvas()" class="p-2 rounded text-red-400 hover:bg-red-50" title="Gomme (effacer le dessin)">
+                <!-- Icône gomme -->
+                <span class="text-xl leading-none" aria-hidden="true">🧽</span>
+                <span class="sr-only">Effacer</span>
             </button>
         </div>
     </header>
@@ -629,19 +633,31 @@
         const cursorDiv = document.getElementById('custom-cursor');
         let isDrawing = false;
         let lastX = 0, lastY = 0;
+        let dpr = window.devicePixelRatio || 1;
+
+        function applyPenStyle() {
+            ctx.strokeStyle = '#000000';
+            ctx.lineWidth = 3;
+            ctx.lineCap = 'round';
+            ctx.lineJoin = 'round';
+        }
 
         function resizeCanvas() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-            if (state.currentTool === 'pen') {
-                ctx.strokeStyle = '#ef4444'; 
-                ctx.lineWidth = 3;
-                ctx.lineCap = 'round';
-            }
+            // IMPORTANT: le canvas est dans le conteneur principal (sous le header).
+            // On le calibre donc sur sa taille réelle à l'écran (getBoundingClientRect),
+            // sinon on obtient un décalage entre la souris et le trait.
+            const rect = canvas.getBoundingClientRect();
+            dpr = window.devicePixelRatio || 1;
+            canvas.width = Math.max(1, Math.round(rect.width * dpr));
+            canvas.height = Math.max(1, Math.round(rect.height * dpr));
+
+            // On dessine en "pixels CSS" (pas en pixels canvas), donc on scale le contexte.
+            ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
+            applyPenStyle();
         }
         window.addEventListener('resize', resizeCanvas);
-        // Init canvas size
-        setTimeout(resizeCanvas, 100);
+        // Init canvas size une fois que la mise en page est calculée
+        requestAnimationFrame(resizeCanvas);
 
         function setTool(tool) {
             state.currentTool = tool;
@@ -655,36 +671,47 @@
                 canvas.style.pointerEvents = 'auto';
                 document.body.classList.add('hide-cursor');
                 cursorDiv.style.display = 'block';
-                ctx.strokeStyle = '#ef4444';
-                ctx.lineWidth = 3;
+                applyPenStyle();
                 document.getElementById('tool-hand').className = "p-2 rounded text-slate-500 hover:bg-slate-200";
                 document.getElementById('tool-pen').className = "p-2 rounded bg-white shadow text-red-500";
             }
         }
 
         function clearCanvas() {
+            // Clear en coordonnées canvas (on remet le transform à l'identité le temps du clear)
+            ctx.save();
+            ctx.setTransform(1, 0, 0, 1, 0, 0);
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.restore();
         }
 
-        function getPos(e) {
-            return {
-                x: e.touches ? e.touches[0].clientX : e.clientX,
-                y: e.touches ? e.touches[0].clientY : e.clientY
-            };
+        function getClientPos(e) {
+            if (e.touches && e.touches.length) {
+                return { x: e.touches[0].clientX, y: e.touches[0].clientY };
+            }
+            return { x: e.clientX, y: e.clientY };
+        }
+
+        function getCanvasPos(e) {
+            const { x, y } = getClientPos(e);
+            const rect = canvas.getBoundingClientRect();
+            return { x: x - rect.left, y: y - rect.top };
         }
         
         function updateCursor(e) {
             if (state.currentTool !== 'pen') return;
-            const {x, y} = getPos(e);
+            const {x, y} = getClientPos(e);
             cursorDiv.style.left = x + 'px';
             cursorDiv.style.top = y + 'px';
-            cursorDiv.style.transform = 'translate(-2px, -30px)';
+            // Aligne la pointe du stylo (bas-gauche du SVG) sur la souris
+            cursorDiv.style.transform = 'translate(-6px, -34px)';
         }
 
         ['mousedown', 'touchstart'].forEach(evt => canvas.addEventListener(evt, (e) => {
             if (state.currentTool !== 'pen') return;
+            e.preventDefault();
             isDrawing = true;
-            const {x, y} = getPos(e);
+            const {x, y} = getCanvasPos(e);
             lastX = x; lastY = y;
             updateCursor(e);
         }, {passive: false}));
@@ -692,7 +719,8 @@
         ['mousemove', 'touchmove'].forEach(evt => window.addEventListener(evt, (e) => {
             updateCursor(e);
             if (!isDrawing) return;
-            const {x, y} = getPos(e);
+            e.preventDefault();
+            const {x, y} = getCanvasPos(e);
             ctx.beginPath();
             ctx.moveTo(lastX, lastY);
             ctx.lineTo(x, y);
@@ -700,7 +728,7 @@
             lastX = x; lastY = y;
         }, {passive: false}));
 
-        ['mouseup', 'touchend'].forEach(evt => window.addEventListener(evt, () => isDrawing = false));
+        ['mouseup', 'touchend', 'touchcancel', 'blur'].forEach(evt => window.addEventListener(evt, () => isDrawing = false));
 
         // Start
         renderControls();
